--- a/src/styleLogin.css
+++ b/src/styleLogin.css
@@ -1,7 +1,4 @@
-form{
-    margin:0px;
-    padding: 0px;
-}
+
 .container{
     border-radius: 5px;
     border:4px solid #EDEDED;
@@ -19,6 +16,7 @@ form{
     align-items: center;
     justify-content: center;
     border-right: 1px solid #333;
+    
 }
 /* h1 */
 h1{
@@ -29,7 +27,7 @@ h1{
 /* span */
 .login span{
     align-self: center;
-    margin:200px;
+    
 }
 /* input */
 
@@ -39,7 +37,7 @@ input{
    margin: 10px 0;
    width: 20rem;
    border: 2px solid #333;
-   
+   margin-right: 100px;
 }
 
 .login input::placeholder{
@@ -66,6 +64,7 @@ input{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    
 }
 
 /* h1 */
@@ -74,3 +73,15 @@ input{
     text-align: center;
 }
 
+@media(max-width: 480px){
+    .login{
+        border: none;
+    }
+    .login input{
+        width: 200px;
+       
+    }
+    .submit{
+        width: 10rem;
+    }
+}
