--- a/src/styleLogin.css
+++ b/src/styleLogin.css
@@ -2,7 +2,7 @@
 .container{
     border-radius: 5px;
     border:4px solid #EDEDED;
-    max-width: 950px;
+    max-width: 59.375rem;
     margin: 20px auto 150px;
     display: flex;
     flex-wrap: wrap;
@@ -76,6 +76,11 @@ input{
 @media(max-width: 480px){
     .login{
         border: none;
+        align-items: center;
+
+    }
+    .submit{
+        margin-left: 20px;
     }
     .login input{
         width: 200px;
