--- a/src/styleLogin.css
+++ b/src/styleLogin.css
@@ -13,10 +13,8 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     border-right: 1px solid #333;
-    
 }
 /* h1 */
 h1{
@@ -57,36 +55,81 @@ input{
     font-weight: bolder;
     
 }
-
+.submit:hover{
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
+}
 /* Cadastre-se */
 
 .cad{
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    
+    justify-content: center;
+    align-content: center;
 }
+
 
 /* h1 */
 
 .cad h1{
     text-align: center;
+    align-self: center;
+}
+.submit:nth-child(2){
+    margin: 0 auto;
+    max-width: 100%;
+
 }
 
 @media(max-width: 480px){
+    .container{
+       justify-content: center;
+       align-items: center;
+       text-align: center;
+    }
+    .container h1{
+        text-align: center;
+    }
     .login{
         border: none;
+       /*  flex-grow: 1; */
         align-items: center;
-
+        justify-content: center;
     }
     .submit{
         margin-left: 20px;
-    }
+    } 
     .login input{
-        width: 200px;
+       /*  width: 100%; */
        
     }
-    .submit{
-        width: 10rem;
+    .cad{
+        flex-grow: 1;
+        align-items: center;
+        justify-content: center;
     }
+    .submit:nth-child(2){
+        margin: 0 auto;
+        max-width: 60%;
+
+    }
+    
+}
+@media(max-width:875px){
+    .container{
+        justify-content: center;
+        max-width: 100%;
+    }
+
+    .login{
+        border: none;
+       /*  flex-direction:row ; */
+       /*  flex-grow: 1;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto; */
+    }
+    .login input{
+        max-width:100%;
+    }
+    
 }
